--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This is a wonderful sentence.
+This is a seriously wonderful sentence.
 
 This project will help me learn about working with Git repositories.
